Fix menu item text align

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -951,6 +951,7 @@ a:active {
     width: 25%;
 }
 
+
 .cart-summary__table .cart-summary__item-name,
 .cart-summary__item-size,
 .cart-summary__item-price,
@@ -958,6 +959,11 @@ a:active {
     font-size: 2.2rem;
     color: var(--delta);
     letter-spacing: .1rem;
+    text-align: center;
+}
+
+.cart-summary__item-name {
+    text-align: center;
 }
 
 .cart-summary__item-select,
